@@ -1,3 +1,9 @@
+Sun Nov  9 01:51:50 2014  Benoit Daloze  <eregontp@gmail.com>
+
+	* object.c (Module#const_defined?): [DOC] Revise the documentation.
+	  Patch by Xavier Noria.
+	  [Fixes GH-754] https://github.com/ruby/ruby/pull/754
+
 Sun Nov  9 00:37:44 2014  Tanaka Akira  <akr@fsij.org>
 
 	* test/webrick: Examine log and use assert_join_threads.
